<resources>
    <string name="app_name">PowerWorkOuts</string>
    <string name="workouts">Workouts</string>
    <string name="saved">Saved</string>
    <string name="done">Done</string>
    <string name="welcome">Welcome %1$s,</string>
    <string name="exercise_inquiry">What workouts would you like to do today?</string>
    <string name="category">Category</string>
    <string name="workout">Workout</string>
    <string name="workout_sec">00:30</string>
    <string name="start_workout">Start</string>
    <string name="body_part">Body part</string>
    <string name="equipment">Equipment</string>
    <string name="target">Target</string>
    <string name="loading">Loading…</string>
    <string name="error">Error</string>
    <string name="unsuccessful_feeback">Something went wrong, please try again later</string>
    <string name="failure_feedback">Something went wrong. Please check your internet connection and try again.</string>
    <string name="no_workouts">No workouts found</string>
    <string name="no_workout_categories">No workout categories found</string>
    <string name="content_desc_category_image">Workout category image</string>
    <string name="content_desc_drag">Icon to reorder saved workouts</string>
    <string name="sign_up">Sign Up</string>
    <string name="to_begin_kindly_create_an_acount">To begin kindly create an acount</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="no_saved_workouts">No saved workouts</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="to_access_your_account_kindly_login">To access your account kindly login</string>
    <string name="emailone">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here</string>
    <string name="workout_time">00:30</string>
</resources>