<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:src="@drawable/personal_trainer"
             />

    <TextView
        android:layout_marginTop="0dp"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:fontFamily="@font/poppins_bold"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="@color/my_green"
        android:layout_marginBottom="3dp"
        tools:layout_editor_absoluteX="165dp"
        tools:layout_editor_absoluteY="264dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="20sp"
        android:fontFamily="@font/poppins_black"
        android:textStyle="bold"
        android:text="@string/to_begin_kindly_create_an_acount"
         />

    <EditText
        android:id="@+id/nameEdit"
        android:layout_width="260dp"
        android:layout_height="39dp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/my_black"
        android:fontFamily="@font/poppins_light"
        android:textColor="@color/my_black"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:background="@drawable/by_button"
        android:layout_marginBottom="5dp"
         />

    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="260dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:fontFamily="@font/poppins_light"
        android:textAlignment="center"
        android:background="@drawable/by_button"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="5dp"
         />

    <EditText
        android:id="@+id/passWord"
        android:layout_width="260dp"
        android:layout_height="39dp"
        android:layout_marginBottom="5dp"
        android:hint="Password"
        android:fontFamily="@font/poppins_light"
        android:textAlignment="center"
        android:background="@drawable/by_button"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/confirmPassWord"
        android:layout_width="260dp"
        android:layout_height="39dp"
        android:hint="Confirm Password"
        android:textAlignment="center"
        android:background="@drawable/by_button"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_light"
        android:inputType="textPassword"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/createUser"
        android:layout_width="150dp"
        android:layout_height="39dp"
        android:text="Sign Up"
        android:textAlignment="center"
        android:gravity="center"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="15dp"
        android:background="@drawable/my_sign_up"
        />

    <ProgressBar
        android:id="@+id/firebaseProgress"
        android:textAlignment="center"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/loginProgressText"
        android:layout_margin="20dp"
        android:textAlignment="center"
        android:visibility="gone"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:autoLink="all"
        android:fontFamily="@font/poppins_black"
        android:text="Already have an account? Login Here."
        />

</LinearLayout>