<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WorkoutListActivity">

  <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/app_bar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:collapsedTitleTextColor="@color/white"
        app:contentScrim="@color/power_workouts_green"
        app:expandedTitleTextColor="@color/power_workouts_green"
        app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

      <ImageView
          android:id="@+id/workout_category_image"
          android:layout_width="match_parent"
          android:layout_height="@dimen/image_dimension_4"
          android:contentDescription="@string/content_desc_category_image"
          android:scaleType="centerCrop"
          app:layout_collapseMode="parallax"
          tools:srcCompat="@drawable/ic_baseline_fitness_center" />

      <androidx.appcompat.widget.Toolbar
          android:layout_width="match_parent"
          android:layout_height="?attr/actionBarSize"
          android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
          app:layout_collapseMode="pin" />
    </com.google.android.material.appbar.CollapsingToolbarLayout>
  </com.google.android.material.appbar.AppBarLayout>
  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/workout_list"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/default_margin"
          android:layout_marginTop="@dimen/default_margin"
          android:layout_marginEnd="@dimen/default_margin"
          android:layout_marginBottom="@dimen/quadraple_margin"
          android:visibility="visible"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:listitem="@layout/item_workout_list">

      </androidx.recyclerview.widget.RecyclerView>

      <ProgressBar
          android:id="@+id/progress_circular"
          style="?android:attr/progressBarStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/six_times_margin"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/error_text" />

      <TextView
          android:id="@+id/progress_text"
          style="@style/NormalTextStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/loading"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/progress_circular" />

      <TextView
          android:id="@+id/error_text"
          style="@style/NormalTextStyle"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/default_margin"
          android:layout_marginEnd="@dimen/default_margin"
          android:gravity="center"
          android:visibility="gone"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:text="@string/error" />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>